# vscode-cpm-cmake-manager

./: .env.example  .gitignore  .release-it.json  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  copilot-setup-steps.yml
example/: CMakeLists.txt  README.md
example/include/: greetings.h  math_utils.h
example/src/: greetings.cpp  main.cpp  math_utils.cpp
example/sub_dir_with_a_target/: CMakeLists.txt  config_generator.cpp
src/: cmakecache.ts  cmakecachewatcher.ts  cpmLanguageModelTool.ts  cpmmanager.ts  extension.ts  logger.ts  outputlogger.ts  packagesview.ts  scmpackage.ts  versionutils.ts
src/test/: cmakecache.test.ts  cpmLanguageModelTool.test.ts  cpmmanager.test.ts  extension.test.ts  integration.test.ts  versionutils.test.ts
src/test/suite/: extension.test.ts
